crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__lines_after_imports_lines_after_imports_nothing_after.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
lines_after_imports_nothing_after.py:1:1: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
  |
1 | / from __future__ import annotations
2 | |
3 | | from typing import Any
4 | |
5 | | from requests import Session
6 | |
7 | | from my_first_party import my_first_party_object
8 | |
9 | | from . import my_local_folder_object
  | |____________________________________^ I001 (unsorted-imports)
  |
  = help: Organize imports

ℹ Safe fix
2 2 | 
3 3 | from typing import Any
4 4 | 
5   |-from requests import Session
6   |-
7 5 | from my_first_party import my_first_party_object
  6 |+from requests import Session
8 7 | 
9 8 | from . import my_local_folder_object
