crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__lines_between_typeslines_between_types.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
lines_between_types.py:1:1: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
   |
 1 | / from __future__ import annotations
 2 | |
 3 | | import datetime
 4 | | import json
 5 | |
 6 | |
 7 | | from binascii import hexlify
 8 | |
 9 | | import requests
10 | |
11 | |
12 | | from sanic import Sanic
13 | | from loguru import Logger
14 | |
15 | | from . import config
16 | | from .data import Data
   | |______________________^ I001 (unsorted-imports)
   |
   = help: Organize imports

ℹ Safe fix
9  9  | import requests
10 10 | 
11 11 | 
   12 |+from loguru import Logger
12 13 | from sanic import Sanic
13    |-from loguru import Logger
14 14 | 
15 15 | from . import config
16 16 | from .data import Data
