crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__natural_order.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
natural_order.py:1:1: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
   |
 1 | / import numpy1
 2 | | import numpy10
 3 | | import numpy2
 4 | | from numpy import (
 5 | |     cos,
 6 | |     int8,
 7 | |     sin,
 8 | |     int32,
 9 | |     int64,
10 | |     tan,
11 | |     uint8,
12 | |     uint16,
13 | |     int16,
14 | |     uint32,
15 | |     uint64,
16 | | )
   | |_^ I001 (unsorted-imports)
   |
   = help: Organize imports

ℹ Safe fix
1  1  | import numpy1
   2  |+import numpy2
2  3  | import numpy10
3     |-import numpy2
4  4  | from numpy import (
5  5  |     cos,
6  6  |     int8,
7     |-    sin,
   7  |+    int16,
8  8  |     int32,
9  9  |     int64,
   10 |+    sin,
10 11 |     tan,
11 12 |     uint8,
12 13 |     uint16,
13    |-    int16,
14 14 |     uint32,
15 15 |     uint64,
16 16 | )
