crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__no_detect_same_package.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
bar.py:1:1: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
  |
1 | / import os
2 | | import pandas
3 | | import foo.baz
  | |______________^ I001 (unsorted-imports)
  |
  = help: Organize imports

ℹ Safe fix
1 1 | import os
2   |-import pandas
  2 |+
3 3 | import foo.baz
  4 |+import pandas
